sandbox/output
StringCalculator.java:13: error: missing return statement
    }
    ^
1 error
